<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/apptheme_color"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_action_warning"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="@string/no_connection_alert" />
    </FrameLayout>

    <TextView
        android:id="@+id/alertContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/no_connection_des"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:fontFamily="@string/sans_serif_lghit_font" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOK"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@drawable/bg_flat_button_app_theme" />
        
        <View android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFFF"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quit_app"
            android:textColor="#FFFFFF"
            android:textSize="18sp" 
            android:background="@drawable/bg_flat_button_app_theme"/>
    </LinearLayout>

</LinearLayout>